# OperatingSystems_Practice

./: CMakeLists.txt  main.cpp  my_dyna_struct.cpp  my_dyna_struct.h  string_ops.cpp  string_ops.h
inf_print/: main.cpp
threading_example/: main_lab_6.cpp  main_lab_7.cpp  main_lab_8.cpp  main_simple_data_mutating.cpp  main_simple_example.cpp
